--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1458,7 +1458,7 @@ pro.wizard.activation.key_file=Lizenzschl\u00fcssel Datei
 pro.wizard.activation.key_valid_till=G\u00fcltig bis\:
 #orig#pro.wizard.activation.license_key=License Key
 pro.wizard.activation.license_key=Lizenzschl\u00fcssel
-pro.wizard.activation.limit_hit=Nur {1} GBs Datten und {0} Folders erlaubt.
+pro.wizard.activation.limit_hit=Nur {1} GBs Daten und {0} Folders erlaubt.
 #orig#pro.wizard.activation.multiple_key_select=Login successful. Please select the license key to use.
 pro.wizard.activation.multiple_key_select=Login erfolgreich. Bitte w\u00e4hlen Sie einen Lizenzschl\u00fcssel
 #orig#pro.wizard.activation.no_key_available=No valid license key available
